:lipstick: Ensure a loader is visible while the form is being saved

--- a/src/openforms/forms/static/forms/scss/components/admin/_box-loader.scss
+++ b/src/openforms/forms/static/forms/scss/components/admin/_box-loader.scss
@@ -10,7 +10,7 @@
 .box-loader {
   position: relative;
   display: grid;
-  grid-template-columns: 20% 20% 20%;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 4px;
   width: 50px;
   height: 20px;
