--- a/src/openforms/forms/static/forms/scss/components/admin/_edit-panel.scss
+++ b/src/openforms/forms/static/forms/scss/components/admin/_edit-panel.scss
@@ -2,9 +2,24 @@
 
 .edit-panel {
   display: flex;
+  position: relative;
 
   h2 + & {
     margin-top: 20px;
+  }
+
+  &__submit-layer {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.75);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__nav {
